--- a/package.json
+++ b/package.json
@@ -3,22 +3,18 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview",
-		"prepare": "husky install",
-		"format": "prettier . --write"
-	},
 	"dependencies": {
+		"axios": "^1.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.45.0",
+		"react-router-dom": "^6.13.0",
 		"sass": "^1.63.6"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
+		"@types/uuid": "^9.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.60.0",
 		"@typescript-eslint/parser": "^5.60.0",
 		"@vitejs/plugin-react": "^4.0.0",
@@ -32,6 +28,14 @@
 		"prettier": "2.8.8",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.9"
+	},
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"prepare": "husky install",
+		"format": "prettier . --write"
 	},
 	"lint-staged": {
 		"*.{ts,tsx}": "eslint --cache --fix",
